--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -277,7 +277,7 @@
                         </div>
                     </div>
                     <div class="table table-error-alarm"
-                         data-bind="with: errorRangeSetting.upperLimitSetting">
+                         data-bind="with: itemRangeSet">
                         <div class="cell valign-center">
                             <!--D3_8-->
                             <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM019_120')}</div>
@@ -285,13 +285,13 @@
                         <div class="cell valign-center">
                             <!--D3_9-->
                             <div tabindex="8" data-bind="ntsCheckBox: {
-                                checked: valueSettingAtr,
+                                checked: errorUpperLimitSetAtr,
                                 enable: $vm.screenControl().enableD3_9()}"/>
                             <com:ko-if bind="$vm.screenControl().visibleD3_10()">
                                 <!--D3_10-->
                                 <input id="D3_10" tabindex="9" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_121]',
-                                    value: rangeValue,
+                                    value: errorUpRangeValAmount,
                                     option: $vm.option,
                                     enable: $vm.screenControl().enableD3_10(),
                                     constraint: 'DetailAmountType'}"/>
@@ -305,18 +305,18 @@
                         </div>
                     </div>
                     <div class="table table-error-alarm"
-                         data-bind="with: errorRangeSetting.lowerLimitSetting">
+                         data-bind="with: itemRangeSet">
                         <div class="cell valign-center"/>
                         <div class="cell valign-center">
                             <!--D3_12-->
                             <div tabindex="10" data-bind="ntsCheckBox: {
-                                checked: valueSettingAtr,
+                                checked: errorLowerLimitSetAtr,
                                 enable: $vm.screenControl().enableD3_12()}"/>
                             <com:ko-if bind="$vm.screenControl().visibleD3_13()">
                                 <!--D3_13-->
                                 <input id="D3_13" tabindex="11" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_123]',
-                                    value: rangeValue,
+                                    value: errorLoRangeValAmount,
                                     option: $vm.option,
                                     enable: $vm.screenControl().enableD3_13(),
                                     constraint: 'DetailAmountType'}"/>
@@ -330,7 +330,7 @@
                         </div>
                     </div>
                     <div class="table table-error-alarm"
-                         data-bind="with: alarmRangeSetting.upperLimitSetting">
+                         data-bind="with: itemRangeSet">
                         <div class="cell valign-center">
                             <!--D3_15-->
                             <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM019_125')}</div>
@@ -338,13 +338,13 @@
                         <div class="cell valign-center">
                             <!--D3_16-->
                             <div tabindex="12" data-bind="ntsCheckBox: {
-                                checked: valueSettingAtr,
+                                checked: alarmUpperLimitSetAtr,
                                 enable: $vm.screenControl().enableD3_16()}"/>
                             <com:ko-if bind="$vm.screenControl().visibleD3_17()">
                                 <!--D3_17-->
                                 <input id="D3_17" tabindex="13" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_126]',
-                                    value: rangeValue,
+                                    value: alarmUpRangeValAmount,
                                     option: $vm.option,
                                     enable: $vm.screenControl().enableD3_17(),
                                     constraint: 'DetailAmountType'}"/>
@@ -358,18 +358,18 @@
                         </div>
                     </div>
                     <div class="table table-error-alarm"
-                         data-bind="with: alarmRangeSetting.lowerLimitSetting">
+                         data-bind="with: itemRangeSet">
                         <div class="cell valign-center"/>
                         <div class="cell valign-center">
                             <!--D3_19-->
                             <div tabindex="14" data-bind="ntsCheckBox: {
-                                checked: valueSettingAtr,
+                                checked: alarmLowerLimitSetAtr,
                                 enable: $vm.screenControl().enableD3_19()}"/>
                             <com:ko-if bind="$vm.screenControl().visibleD3_20()">
                                 <!--D3_20-->
                                 <input id="D3_20" tabindex="15" data-bind="ntsNumberEditor: {
                                     name: '#[QMM019_128]',
-                                    value: rangeValue,
+                                    value: alarmLoRangeValAmount,
                                     option: $vm.option,
                                     enable: $vm.screenControl().enableD3_20(),
                                     constraint: 'DetailAmountType'}"/>
