--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
@@ -116,11 +116,6 @@ textarea {
     background: transparent;
     /* color: transparent; */
 }
-#input-containner{
-    width: 803px;
-    height: 365px;
-    position: relative;
-}
 #input-content-area{
     position: absolute;
     top: 560px;
@@ -165,7 +160,17 @@ textarea {
     width: 100%;
     height: 100%;
 }
-#auto-complete-containner{
+#auto-complete-container{
     position: absolute;
     z-index: 1000;
 }
+#auto-complete-container{
+    position: absolute;
+    z-index: 9999;
+}
+/*#auto-complete-container option::selection{*/
+    /*background-color: #007fff;*/
+/*}*/
+/*#auto-complete-container option:hover{*/
+    /*background-color: #007fff;*/
+/*}*/
