QMM019: fixbug UT: 127269

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -88,7 +88,7 @@
                         <div class="cell valign-center">
                             <com:ko-if bind="$vm.screenControl().visibleD2_3()">
                                 <!--D2_3-->
-                                <div class="label" data-bind="text: shortName"/>
+                                <div class="label limited-label" data-bind="text: shortName"/>
                             </com:ko-if>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                             </div>
                             <div class="cell valign-center">
                                 <!--D6_4-->
-                                <div class="label" data-bind="text: perValName"/>
+                                <div class="label limited-label" data-bind="text: perValName"/>
                             </div>
                         </div>
                     </com:ko-if>
@@ -198,7 +198,7 @@
                             </div>
                             <div class="cell valign-center">
                                 <!--D7_4-->
-                                <div class="label" data-bind="text: formulaName"/>
+                                <div class="label limited-label" data-bind="text: formulaName"/>
                             </div>
                         </div>
                     </com:ko-if>
@@ -219,7 +219,7 @@
                             </div>
                             <div class="cell valign-center">
                                 <!--D8_4-->
-                                <div class="label" data-bind="text: wageTableName"/>
+                                <div class="label limited-label" data-bind="text: wageTableName"/>
                             </div>
                         </div>
                     </com:ko-if>
