--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
@@ -92,7 +92,7 @@
                         <div class="cell valign-center">
                             <com:ko-if bind="$vm.screenControl().visibleE2_3()">
                                 <!--E2_3-->
-                                <div class="label" data-bind="text: shortName"/>
+                                <div class="label limited-label" data-bind="text: shortName"/>
                             </com:ko-if>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             </div>
                             <div class="cell valign-center">
                                 <!--E5_4-->
-                                <div class="label" data-bind="text: perValName"/>
+                                <div class="label limited-label" data-bind="text: perValName"/>
                             </div>
                         </div>
                     </com:ko-if>
@@ -179,7 +179,7 @@
                             </div>
                             <div class="cell valign-center">
                                 <!--E6_4-->
-                                <div class="label" data-bind="text: formulaName"/>
+                                <div class="label limited-label" data-bind="text: formulaName"/>
                             </div>
                         </div>
                     </com:ko-if>
@@ -200,7 +200,7 @@
                             </div>
                             <div class="cell valign-center">
                                 <!--E7_4-->
-                                <div class="label" data-bind="text: wageTableName"/>
+                                <div class="label limited-label" data-bind="text: wageTableName"/>
                             </div>
                         </div>
                     </com:ko-if>
@@ -238,7 +238,7 @@
                             </div>
                             <div class="cell valign-center">
                                 <!--E9_4-->
-                                <div class="label" data-bind="text: statementItemName"/>
+                                <div class="label limited-label" data-bind="text: statementItemName"/>
                             </div>
                         </div>
                     </com:ko-if>
