--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/f/index.xhtml
@@ -92,7 +92,7 @@
                         <div class="cell valign-center">
                             <com:ko-if bind="$vm.screenControl().visibleF2_3()">
                                 <!--F2_3-->
-                                <div class="label" data-bind="text: shortName"/>
+                                <div class="label limited-label" data-bind="text: shortName"/>
                             </com:ko-if>
                         </div>
                     </div>
