--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/m/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/001/m/index.xhtml
@@ -27,7 +27,7 @@
 					<i class="image image-calendar" /> <span>#{i18n.getText('CMM018_74')}</span>
 					<!-- M1_6 -->										
 					<div id="daterangepicker" tabindex="1"
-						data-bind="ntsDateRangePicker: { required: required, enable: enable, showNextPrevious: true, value: dateValue, maxRange: 'oneMonth', type: 'year'}" />
+						data-bind="ntsDateRangePicker: { required: required, enable: enable, showNextPrevious: true, value: dateValue, maxRange: 'oneMonth', type: 'year', jumpUnit : 'year'}" />
 				</div>
 			</div>
 		</ui:define>
