--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/006/c/index.xhtml
@@ -92,7 +92,7 @@
 			</div>
 			<div id="functions-area-bottom">
 				<!-- C5_2 -->
-				<button tabindex="5" class="x-large proceed" data-bind="click: execute, enable: selectedCodeLeft().length > 0">#{i18n.getText('QMM006_45')}</button>
+				<button tabindex="5" class="x-large proceed" data-bind="click: execute, enable: selectedCodeLeft().length > 0 &amp;&amp; selectedCodeRight().length > 0">#{i18n.getText('QMM006_45')}</button>
 				<!-- C5_3 -->
 				<button tabindex="6" data-bind="click: close">#{i18n.getText('QMM006_39')}</button>
 			</div>
