--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/002/c/index.xhtml
@@ -15,7 +15,7 @@
 		</ui:define>
 		<ui:define name="content">
 			<div id="functions-area">
-				<button tabindex = "1" data-bind="click: execute, enable: selectedSourceBranchCodes().length > 0, timeClick: 500">#{i18n.getText('QMM002_22')}</button>
+				<button tabindex = "1" data-bind="click: execute, enable: selectedSourceBranchCodes().length > 0 &amp;&amp; selectedDesBranchCode().length > 4, timeClick: 500">#{i18n.getText('QMM002_22')}</button>
 				<button tabindex = "2" data-bind="click: close, timeClick: 500">#{i18n.getText('QMM002_23')}</button>
 			</div>
 			<div class="contents-area dialog-content" style="padding: 10px 25px">
@@ -46,7 +46,6 @@
 							primaryText: 'nodeText',
 							multiple: true,
 							enable: true,
-							initialExpandDepth: 0,
 							showCheckBox: true}"></table>
 				</div>
 				<div id="midsec" style="display: inline-block; width: 65px">
@@ -75,7 +74,6 @@
 							primaryText: 'nodeText',
 							multiple: false,
 							enable: true,
-							initialExpandDepth: 0,
 							showCheckBox: false}"></table>
 				</div>
 			</div>
