--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/b.xhtml
@@ -7,7 +7,7 @@
         <!--B1_3 賃金テーブル名称-->
         <div style="width: 260px;" data-bind="with: selectedWageTable">
             <div style="display: inline-block" data-bind="text: wageTableCode"></div>
-            <div style="display: inline-block; margin-left: 10px;"
+            <div class="limited-label" style="display: inline-block; margin-left: 10px; width: 190px; vertical-align: text-bottom;"
                  data-bind="text: wageTableName"></div>
         </div>
         <div id="B1_4" style="width: 110px;"
