--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/d.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/d.xhtml
@@ -8,7 +8,7 @@
              data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_8')}</div>
         <div style="width: 260px;" data-bind="with: selectedWageTable">
             <div style="display: inline-block" data-bind="text: wageTableCode"></div>
-            <div style="display: inline-block; margin-left: 10px;"
+            <div class="limited-label" style="display: inline-block; margin-left: 10px; width: 190px; vertical-align: text-bottom;"
                  data-bind="text: wageTableName"></div>
         </div>
         <div style="width: 110px;"
