--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/c/index.xhtml
@@ -57,7 +57,7 @@
                         </div>
                         <div data-bind = "if: calculationFormulaClassification() == 1">
                             <!--C2_7; C2_8-->
-                            <button data-bind = "click: function(){$vm.doMasterConfiguration()}" tabindex="13">#{i18n.getText('QMM017_27')}</button>
+                            <button class = "small" data-bind = "click: function(){$vm.doMasterConfiguration()}" tabindex="13">#{i18n.getText('QMM017_27')}</button>
                             <div style = "display: inline-block" data-bind = "text: displaySetting"></div>
                         </div>
                     </th>
@@ -79,8 +79,8 @@
                         <div data-bind = "text: $vm.basicFormulaSetting().branchCondition"></div>
                     </th>
                     <th colspan="2" class = "ui-widget-header">
-                        <button tabindex="14" data-bind = "click: $vm.setAllFixedValue">#{i18n.getText('QMM017_34')}</button>
-                        <button tabindex="15" data-bind = "click: $vm.setAllCalculationFormula">#{i18n.getText('QMM017_35')}</button>
+                        <button class = "small" tabindex="14" data-bind = "click: $vm.setAllFixedValue">#{i18n.getText('QMM017_34')}</button>
+                        <button class = "small" tabindex="15" data-bind = "click: $vm.setAllCalculationFormula">#{i18n.getText('QMM017_35')}</button>
                     </th>
                 </tr>
                 </thead>
@@ -113,7 +113,7 @@
                         </div>
                         <div data-bind = "visible: calculationFormulaClassification() == 1">
                             <!--C3_11-->
-                            <button data-bind = "click: function(){$vm.doConfiguration($index())}" tabindex="18">#{i18n.getText('QMM017_27')}</button>
+                            <button class = "small" data-bind = "click: function(){$vm.doConfiguration($index())}" tabindex="18">#{i18n.getText('QMM017_27')}</button>
                             <!--C3_12-->
                             <div style = "display: inline-block" data-bind = "text: displaySetting"></div>
                         </div>
