--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/e/index.xhtml
@@ -11,6 +11,7 @@
         <com:ValidatorScript>
             nts.uk.ctx.pr.core.dom.wageprovision.formula.BasePriceFixedAmount
             nts.uk.ctx.pr.core.dom.wageprovision.formula.BaseItemFixedValue
+            nts.uk.ctx.pr.core.dom.wageprovision.formula.CoefficientFixedValue
             nts.uk.ctx.pr.core.dom.wageprovision.formula.PremiumRate
         </com:ValidatorScript>
         <com:scriptfile set="IGNITE"/>
@@ -24,7 +25,7 @@
         <div id="contents-area" style="padding-top: 0px;">
             <div style="margin-left: 20px;" data-bind="with: basicCalculationFormula">
                 <!--E1-1; E1_2; E1_13-->
-                <div class="dialog-first-element">
+                <div class="dialog-first-element" style = "min-width: 500px;">
                     <div>#{i18n.getText('QMM017_166')}</div>
                     <div data-bind = "visible: $vm.isShowConditionItem" style="margin-left: 30px;">#{i18n.getText('QMM017_167')}</div>
                     <div data-bind = "text: $vm.conditionItemName, visible: $vm.isShowConditionItem"></div>
@@ -77,7 +78,7 @@
                             <div style = "margin-left: 115px;">
                                 <!--E3_4; E2_5-->
                                 <div data-bind = "if: standardAmountClassification() != 0">
-                                    <button id = "E2_4" data-bind = "click: function(){$vm.selectTargetItem()}" tabindex = "4">#{i18n.getText('QMM017_107')}</button>
+                                    <button class = "small" id = "E2_4" data-bind = "click: function(){$vm.selectTargetItem()}" tabindex = "4">#{i18n.getText('QMM017_107')}</button>
                                     <input data-bind="ntsTextEditor: {
                                         value: $vm.baseAmountTargetItem,
                                         enable: false}" />
@@ -234,7 +235,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
