--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/f/index.xhtml
@@ -20,7 +20,7 @@
             <div style="margin-left: 20px;">
                 <!--E1-1; E1_2; E1_13-->
                 <div class="dialog-first-element">
-                    <div style = "width: 350px;">#{i18n.getText('QMM017_126')}</div>
+                    <div style = "width: 350px; font-size: 1.5rem;" data-bind = "text: standardAmountType"></div>
                 </div>
                 <div style = "margin-top: 10px;">
                     <!--mix of 3 case-->
