QMM039 fix bug #125477

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/cmm/015/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/cmm/015/a/index.xhtml
@@ -42,7 +42,7 @@
         </div>
         <div id="contents-area" class="fixed-flex-layout">
             <!--A2_1-->
-            <div id="left-content" class="fixed-flex-layout-left">
+            <div class="fixed-flex-layout-left">
                 <div id="left">
                     <div data-bind="ntsPanel:{showIcon: true, width: 300}" class="cf">
                         <!--A2_2-->
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <div id="right-content" class="fixed-flex-layout-right">
+            <div class="fixed-flex-layout-right">
                 <div id="right">
                     <div data-bind="with: selectedItem">
                         <div class="valign-center control-group">
