--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/036/a/index.xhtml
@@ -118,7 +118,7 @@
                             </div>
                             <div class="cell cell-space">
                                 <!--A7_2-->
-                                <div class="label" data-bind="text: categoryAtr"></div>
+                                <div class="label" data-bind="text: categoryAtrText"></div>
                             </div>
                         </div>
 
